server/3.0.2-pre/command-line-arguments.md
---
title: "Command Line Arguments"
section: "Server"
version: "3.0.2 (pre-release)"
---

The Event Store supports many configuration points. There are three distinct ways to set any parameter in the system. Items can be set via command line, environment variables, or put into YAML files. Each of these configuration options has its own trade offs.

To pass a configuration value over the command line you just add the configuration to the line executing the Event Store e.g. `EventStore.ClusterNode.exe --log ~/logs`

While command line arguments tend to be very useful in development scenarios, they are often not the preferred way to handle configuration in a production system.

All arguments can also be set as environment variables. This mechanism is often used in UNIX based systems.

The last way that arguments can be set is to put them into one or more config files. To tell the Event Store to use a config file you pass the files on the command line with `--config=filename`. The basic format of the YAML config file is as follows:

```yaml
---
Log: "/home/Ouro/logs"
IntHttpPort: 2111
---
```

Files can be much nicer for large installations as they can easily be distributed/managed centrally, or generated by a configuration management system such as Puppet.

The order of precedence between the multiple config sources is also important as you could feasibly set them in multiple ways. The command line is the highest priority followed by environment variables. Files are the lowest precedence and are processed in the order they are given on the command line. When starting up the Event Store the major parameters are listed in the log (including where they were set from).

```text
ES VERSION:               1.0.3 (dev/5488fa34228e283bad985966b700e1fc48a0780a, Tue, 2 Jul 2013 12:39:02 +0300)
OS:                       Linux (Unix 3.2.0.27)
RUNTIME:                  3.0.10 (master/1166156 Tue Apr 23 14:56:42 EEST 2013) (EventStore build) (64-bit)
GC:                       2 GENERATIONS
LOGS:                     /home/greg/foo

SHOW HELP:                False (<DEFAULT>)
SHOW VERSION:             False (<DEFAULT>)
LOGS DIR:                 /home/greg/foo (--logsdir from command line)
CONFIGS:                  <empty> (<DEFAULT>)
DEFINES:                  <empty> (<DEFAULT>)
IP:                       127.0.0.1 (<DEFAULT>)
TCP PORT:                 1113 (<DEFAULT>)
SECURE TCP PORT:          0 (<DEFAULT>)
HTTP PORT:                2113 (<DEFAULT>)
STATS PERIOD SEC:         30 (<DEFAULT>)
CACHED CHUNKS:            -1 (<DEFAULT>)
CHUNKS CACHE SIZE:        536871424 (<DEFAULT>)
DB PATH:                  /tmp/foo (--db from command line)
SKIP DB VERIFY:           False (<DEFAULT>)
RUN PROJECTIONS:          True (<DEFAULT>)
PROJECTION THREADS:       3 (<DEFAULT>)
WORKER THREADS:           5 (<DEFAULT>)
HTTP PREFIXES:            <empty> (<DEFAULT>)
ENABLE TRUSTED AUTH:      False (<DEFAULT>)
CERTIFICATE STORE:        <empty> (<DEFAULT>)
CERTIFICATE NAME:         <empty> (<DEFAULT>)
CERTIFICATE FILE:         <empty> (<DEFAULT>)
CERTIFICATE PASSWORD:     <empty> (<DEFAULT>)
PREPARE TIMEOUT MS:       2000 (<DEFAULT>)
COMMIT TIMEOUT MS:        2000 (<DEFAULT>)
```

<span class="note">
User projections are not enabled by default, however the projections engine is used internally for account management. If you want to run user projections, it is necessary to start using the `--run-projections=all` command line parameter.<br><br>Projections are still experimental and as such we have not yet documented them here. However, there are two series of blog posts about how they can be used listed on the [docs homepage](/).
</span>

The following parameters are supported by the Event Store:

<table>
    <thead>
        <tr>
            <th>Group</th>
            <th>Parameter</th>
            <th>Environment <em>(all prefixed with EVENTSTORE_)</em>
            </th>
            <th>Yaml</th>
            <th>Description</th>
            <th>Default</th>
        </tr>
    </thead>
    <tbody>
        <tr>
            <td><strong>Application Options</strong>
            </td>
            <td>-Help
                <br>--help=VALUE
                <br>
            </td>
            <td>EVENTSTORE_HELP</td>
            <td>Help</td>
            <td>Show help.</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-Version
                <br>--version=VALUE
                <br>
            </td>
            <td>EVENTSTORE_VERSION</td>
            <td>Version</td>
            <td>Show version.</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-Log
                <br>--log=VALUE
                <br>
            </td>
            <td>EVENTSTORE_LOG</td>
            <td>Log</td>
            <td>Path where to keep log files.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-Config
                <br>--config=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CONFIG</td>
            <td>Config</td>
            <td>Configuration files.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-Defines
                <br>--defines=VALUE
                <br>
            </td>
            <td>EVENTSTORE_DEFINES</td>
            <td>Defines</td>
            <td>Run-time conditionals.</td>
            <td>n/a</td>
        </tr>
        <tr>
            <td></td>
            <td>-WhatIf
                <br>--what-if=VALUE
                <br>
            </td>
            <td>EVENTSTORE_WHAT_IF</td>
            <td>WhatIf</td>
            <td>Print effective configuration to console and then exit.</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-MonoMinThreadpoolSize
                <br>--mono-min-threadpool-size=VALUE
                <br>
            </td>
            <td>EVENTSTORE_MONO_MIN_THREADPOOL_SIZE</td>
            <td>MonoMinThreadpoolSize</td>
            <td>Minimum number of worker threads when running under mono. Set to 0 to leave machine defaults.</td>
            <td>10</td>
        </tr>
        <tr>
            <td></td>
            <td>-Force
                <br>--force=VALUE
                <br>
            </td>
            <td>EVENTSTORE_FORCE</td>
            <td>Force</td>
            <td>Force the Event Store to run in possibly harmful environments such as with Boehm GC.</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-StatsPeriodSec
                <br>--stats-period-sec=VALUE
                <br>
            </td>
            <td>EVENTSTORE_STATS_PERIOD_SEC</td>
            <td>StatsPeriodSec</td>
            <td>The number of seconds between statistics gathers.</td>
            <td>30</td>
        </tr>
        <tr>
            <td></td>
            <td>-WorkerThreads
                <br>--worker-threads=VALUE
                <br>
            </td>
            <td>EVENTSTORE_WORKER_THREADS</td>
            <td>WorkerThreads</td>
            <td>The number of threads to use for pool of worker services.</td>
            <td>5</td>
        </tr>
        <tr>
            <td><strong>Authentication Options</strong>
            </td>
            <td>-AuthenticationType
                <br>--authentication-type=VALUE
                <br>
            </td>
            <td>EVENTSTORE_AUTHENTICATION_TYPE</td>
            <td>AuthenticationType</td>
            <td>The type of authentication to use.</td>
            <td>internal</td>
        </tr>
        <tr>
            <td><strong>Certificate Options</strong>
            </td>
            <td>-CertificateStoreLocation
                <br>--certificate-store-location=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CERTIFICATE_STORE_LOCATION</td>
            <td>CertificateStoreLocation</td>
            <td>The certificate store location name.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-CertificateStoreName
                <br>--certificate-store-name=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CERTIFICATE_STORE_NAME</td>
            <td>CertificateStoreName</td>
            <td>The certificate store name.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-CertificateSubjectName
                <br>--certificate-subject-name=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CERTIFICATE_SUBJECT_NAME</td>
            <td>CertificateSubjectName</td>
            <td>The certificate subject name.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-CertificateThumbprint
                <br>--certificate-thumbprint=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CERTIFICATE_THUMBPRINT</td>
            <td>CertificateThumbprint</td>
            <td>The certificate fingerprint/thumbprint.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-CertificateFile
                <br>--certificate-file=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CERTIFICATE_FILE</td>
            <td>CertificateFile</td>
            <td>The path to certificate file.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-CertificatePassword
                <br>--certificate-password=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CERTIFICATE_PASSWORD</td>
            <td>CertificatePassword</td>
            <td>The password to certificate in file.</td>
            <td></td>
        </tr>
        <tr>
            <td><strong>Cluster Options</strong>
            </td>
            <td>-ClusterSize
                <br>--cluster-size=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CLUSTER_SIZE</td>
            <td>ClusterSize</td>
            <td>The number of nodes in the cluster.</td>
            <td>1</td>
        </tr>
        <tr>
            <td></td>
            <td>-NodePriority
                <br>--node-priority=VALUE
                <br>
            </td>
            <td>EVENTSTORE_NODE_PRIORITY</td>
            <td>NodePriority</td>
            <td>The node priority used during master election</td>
            <td>0</td>
        </tr>
        <tr>
            <td></td>
            <td>-CommitCount
                <br>--commit-count=VALUE
                <br>
            </td>
            <td>EVENTSTORE_COMMIT_COUNT</td>
            <td>CommitCount</td>
            <td>The number of nodes which must acknowledge commits before acknowledging to a client.</td>
            <td>-1</td>
        </tr>
        <tr>
            <td></td>
            <td>-PrepareCount
                <br>--prepare-count=VALUE
                <br>
            </td>
            <td>EVENTSTORE_PREPARE_COUNT</td>
            <td>PrepareCount</td>
            <td>The number of nodes which must acknowledge prepares.</td>
            <td>-1</td>
        </tr>
        <tr>
            <td></td>
            <td>-DiscoverViaDns
                <br>--discover-via-dns=VALUE
                <br>
            </td>
            <td>EVENTSTORE_DISCOVER_VIA_DNS</td>
            <td>DiscoverViaDns</td>
            <td>Whether to use DNS lookup to discover other cluster nodes.</td>
            <td>True</td>
        </tr>
        <tr>
            <td></td>
            <td>-ClusterDns
                <br>--cluster-dns=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CLUSTER_DNS</td>
            <td>ClusterDns</td>
            <td>DNS name from which other nodes can be discovered.</td>
            <td>fake.dns</td>
        </tr>
        <tr>
            <td></td>
            <td>-ClusterGossipPort
                <br>--cluster-gossip-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CLUSTER_GOSSIP_PORT</td>
            <td>ClusterGossipPort</td>
            <td>The port on which cluster nodes' managers are running.</td>
            <td>30777</td>
        </tr>
        <tr>
            <td></td>
            <td>-GossipSeed
                <br>--gossip-seed=VALUE
                <br>
            </td>
            <td>EVENTSTORE_GOSSIP_SEED</td>
            <td>GossipSeed</td>
            <td>Endpoints for other cluster nodes from which to seed gossip</td>
            <td>n/a</td>
        </tr>
        <tr>
            <td></td>
            <td>-GossipIntervalMs
                <br>--gossip-interval-ms=VALUE
                <br>
            </td>
            <td>EVENTSTORE_GOSSIP_INTERVAL_MS</td>
            <td>GossipIntervalMs</td>
            <td>The interval nodes should try to gossip with each other in ms.</td>
            <td>1000</td>
        </tr>
        <tr>
            <td></td>
            <td>-GossipAllowedDifferenceMs
                <br>--gossip-allowed-difference-ms=VALUE
                <br>
            </td>
            <td>EVENTSTORE_GOSSIP_ALLOWED_DIFFERENCE_MS</td>
            <td>GossipAllowedDifferenceMs</td>
            <td>The amount of drift between clocks on nodes allowed before gossip is rejected in ms.</td>
            <td>60000</td>
        </tr>
        <tr>
            <td></td>
            <td>-GossipTimeoutMs
                <br>--gossip-timeout-ms=VALUE
                <br>
            </td>
            <td>EVENTSTORE_GOSSIP_TIMEOUT_MS</td>
            <td>GossipTimeoutMs</td>
            <td>The timeout on gossip to another node in ms.</td>
            <td>500</td>
        </tr>
        <tr>
            <td><strong>Database Options</strong>
            </td>
            <td>-MinFlushDelayMs
                <br>--min-flush-delay-ms=VALUE
                <br>
            </td>
            <td>EVENTSTORE_MIN_FLUSH_DELAY_MS</td>
            <td>MinFlushDelayMs</td>
            <td>The minimum flush delay in milliseconds.</td>
            <td>2</td>
        </tr>
        <tr>
            <td></td>
            <td>-DisableScavengeMerging
                <br>--disable-scavenge-merging=VALUE
                <br>
            </td>
            <td>EVENTSTORE_DISABLE_SCAVENGE_MERGING</td>
            <td>DisableScavengeMerging</td>
            <td>Disables the merging of chunks when scavenge is running</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-CachedChunks
                <br>--cached-chunks=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CACHED_CHUNKS</td>
            <td>CachedChunks</td>
            <td>The number of chunks to cache in unmanaged memory.</td>
            <td>-1</td>
        </tr>
        <tr>
            <td></td>
            <td>-ChunksCacheSize
                <br>--chunks-cache-size=VALUE
                <br>
            </td>
            <td>EVENTSTORE_CHUNKS_CACHE_SIZE</td>
            <td>ChunksCacheSize</td>
            <td>The amount of unmanaged memory to use for caching chunks.</td>
            <td>536871424</td>
        </tr>
        <tr>
            <td></td>
            <td>-MaxMemTableSize
                <br>--max-mem-table-size=VALUE
                <br>
            </td>
            <td>EVENTSTORE_MAX_MEM_TABLE_SIZE</td>
            <td>MaxMemTableSize</td>
            <td>Adjusts the maximum size of a mem table.</td>
            <td>1000000</td>
        </tr>
        <tr>
            <td></td>
            <td>-Db
                <br>--db=VALUE
                <br>
            </td>
            <td>EVENTSTORE_DB</td>
            <td>Db</td>
            <td>The path the db should be loaded/saved to.</td>
            <td></td>
        </tr>
        <tr>
            <td></td>
            <td>-MemDb
                <br>--mem-db=VALUE
                <br>
            </td>
            <td>EVENTSTORE_MEM_DB</td>
            <td>MemDb</td>
            <td>Keep everything in memory, no directories or files are created.</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-SkipDbVerify
                <br>--skip-db-verify=VALUE
                <br>
            </td>
            <td>EVENTSTORE_SKIP_DB_VERIFY</td>
            <td>SkipDbVerify</td>
            <td>Bypasses the checking of file hashes of database during startup (allows for faster startup).</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-PrepareTimeoutMs
                <br>--prepare-timeout-ms=VALUE
                <br>
            </td>
            <td>EVENTSTORE_PREPARE_TIMEOUT_MS</td>
            <td>PrepareTimeoutMs</td>
            <td>Prepare timeout (in milliseconds).</td>
            <td>2000</td>
        </tr>
        <tr>
            <td></td>
            <td>-CommitTimeoutMs
                <br>--commit-timeout-ms=VALUE
                <br>
            </td>
            <td>EVENTSTORE_COMMIT_TIMEOUT_MS</td>
            <td>CommitTimeoutMs</td>
            <td>Commit timeout (in milliseconds).</td>
            <td>2000</td>
        </tr>
        <tr>
            <td></td>
            <td>-UnsafeDisableFlushToDisk
                <br>--unsafe-disable-flush-to-disk=VALUE
                <br>
            </td>
            <td>EVENTSTORE_UNSAFE_DISABLE_FLUSH_TO_DISK</td>
            <td>UnsafeDisableFlushToDisk</td>
            <td>Disable flushing to disk. (UNSAFE: on power off)</td>
            <td>False</td>
        </tr>
        <tr>
            <td><strong>Interface Options</strong>
            </td>
            <td>-IntIp
                <br>--int-ip=VALUE
                <br>
            </td>
            <td>EVENTSTORE_INT_IP</td>
            <td>IntIp</td>
            <td>Internal IP Address.</td>
            <td>127.0.0.1</td>
        </tr>
        <tr>
            <td></td>
            <td>-ExtIp
                <br>--ext-ip=VALUE
                <br>
            </td>
            <td>EVENTSTORE_EXT_IP</td>
            <td>ExtIp</td>
            <td>External IP Address.</td>
            <td>127.0.0.1</td>
        </tr>
        <tr>
            <td></td>
            <td>-IntHttpPort
                <br>--int-http-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_INT_HTTP_PORT</td>
            <td>IntHttpPort</td>
            <td>Internal HTTP Port.</td>
            <td>2112</td>
        </tr>
        <tr>
            <td></td>
            <td>-ExtHttpPort
                <br>--ext-http-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_EXT_HTTP_PORT</td>
            <td>ExtHttpPort</td>
            <td>External HTTP Port.</td>
            <td>2113</td>
        </tr>
        <tr>
            <td></td>
            <td>-IntTcpPort
                <br>--int-tcp-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_INT_TCP_PORT</td>
            <td>IntTcpPort</td>
            <td>Internal TCP Port.</td>
            <td>1112</td>
        </tr>
        <tr>
            <td></td>
            <td>-IntSecureTcpPort
                <br>--int-secure-tcp-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_INT_SECURE_TCP_PORT</td>
            <td>IntSecureTcpPort</td>
            <td>Internal Secure TCP Port.</td>
            <td>0</td>
        </tr>
        <tr>
            <td></td>
            <td>-ExtTcpPort
                <br>--ext-tcp-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_EXT_TCP_PORT</td>
            <td>ExtTcpPort</td>
            <td>External TCP Port.</td>
            <td>1113</td>
        </tr>
        <tr>
            <td></td>
            <td>-ExtSecureTcpPort
                <br>--ext-secure-tcp-port=VALUE
                <br>
            </td>
            <td>EVENTSTORE_EXT_SECURE_TCP_PORT</td>
            <td>ExtSecureTcpPort</td>
            <td>External Secure TCP Port.</td>
            <td>0</td>
        </tr>
        <tr>
            <td></td>
            <td>-IntTcpHeartbeatTimeout
                <br>--int-tcp-heartbeat-timeout=VALUE
                <br>
            </td>
            <td>EVENTSTORE_INT_TCP_HEARTBEAT_TIMEOUT</td>
            <td>IntTcpHeartbeatTimeout</td>
            <td>Heartbeat timeout for internal TCP sockets</td>
            <td>700</td>
        </tr>
        <tr>
            <td></td>
            <td>-ExtTcpHeartbeatTimeout
                <br>--ext-tcp-heartbeat-timeout=VALUE
                <br>
            </td>
            <td>EVENTSTORE_EXT_TCP_HEARTBEAT_TIMEOUT</td>
            <td>ExtTcpHeartbeatTimeout</td>
            <td>Heartbeat timeout for external TCP sockets</td>
            <td>1000</td>
        </tr>
        <tr>
            <td></td>
            <td>-IntTcpHeartbeatInterval
                <br>--int-tcp-heartbeat-interval=VALUE
                <br>
            </td>
            <td>EVENTSTORE_INT_TCP_HEARTBEAT_INTERVAL</td>
            <td>IntTcpHeartbeatInterval</td>
            <td>Heartbeat interval for internal TCP sockets</td>
            <td>700</td>
        </tr>
        <tr>
            <td></td>
            <td>-ExtTcpHeartbeatInterval
                <br>--ext-tcp-heartbeat-interval=VALUE
                <br>
            </td>
            <td>EVENTSTORE_EXT_TCP_HEARTBEAT_INTERVAL</td>
            <td>ExtTcpHeartbeatInterval</td>
            <td>Heartbeat interval for external TCP sockets</td>
            <td>2000</td>
        </tr>
        <tr>
            <td></td>
            <td>-AdminOnExt
                <br>--admin-on-ext=VALUE
                <br>
            </td>
            <td>EVENTSTORE_ADMIN_ON_EXT</td>
            <td>AdminOnExt</td>
            <td>Whether or not to run the admin ui on the external http endpoint</td>
            <td>True</td>
        </tr>
        <tr>
            <td></td>
            <td>-StatsOnExt
                <br>--stats-on-ext=VALUE
                <br>
            </td>
            <td>EVENTSTORE_STATS_ON_EXT</td>
            <td>StatsOnExt</td>
            <td>Whether or not to accept statistics requests on the external http endpoint, needed if you use admin ui</td>
            <td>True</td>
        </tr>
        <tr>
            <td></td>
            <td>-GossipOnExt
                <br>--gossip-on-ext=VALUE
                <br>
            </td>
            <td>EVENTSTORE_GOSSIP_ON_EXT</td>
            <td>GossipOnExt</td>
            <td>Whether or not to accept gossip requests on the external http endpoint</td>
            <td>True</td>
        </tr>
        <tr>
            <td></td>
            <td>-HttpPrefixes
                <br>--http-prefixes=VALUE
                <br>
            </td>
            <td>EVENTSTORE_HTTP_PREFIXES</td>
            <td>HttpPrefixes</td>
            <td>The prefixes that the http server should respond to.</td>
            <td>n/a</td>
        </tr>
        <tr>
            <td></td>
            <td>-EnableTrustedAuth
                <br>--enable-trusted-auth=VALUE
                <br>
            </td>
            <td>EVENTSTORE_ENABLE_TRUSTED_AUTH</td>
            <td>EnableTrustedAuth</td>
            <td>Enables trusted authentication by an intermediary in the Http</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-UseInternalSsl
                <br>--use-internal-ssl=VALUE
                <br>
            </td>
            <td>EVENTSTORE_USE_INTERNAL_SSL</td>
            <td>UseInternalSsl</td>
            <td>Whether to use secure internal communication.</td>
            <td>False</td>
        </tr>
        <tr>
            <td></td>
            <td>-SslTargetHost
                <br>--ssl-target-host=VALUE
                <br>
            </td>
            <td>EVENTSTORE_SSL_TARGET_HOST</td>
            <td>SslTargetHost</td>
            <td>Target host of server's SSL certificate.</td>
            <td>n/a</td>
        </tr>
        <tr>
            <td></td>
            <td>-SslValidateServer
                <br>--ssl-validate-server=VALUE
                <br>
            </td>
            <td>EVENTSTORE_SSL_VALIDATE_SERVER</td>
            <td>SslValidateServer</td>
            <td>Whether to validate that server's certificate is trusted.</td>
            <td>True</td>
        </tr>
        <tr>
            <td><strong>Projections Options</strong>
            </td>
            <td>-RunProjections
                <br>--run-projections=VALUE
                <br>
            </td>
            <td>EVENTSTORE_RUN_PROJECTIONS</td>
            <td>RunProjections</td>
            <td>Enables the running of JavaScript projections.</td>
            <td>System</td>
        </tr>
        <tr>
            <td></td>
            <td>-ProjectionThreads
                <br>--projection-threads=VALUE
                <br>
            </td>
            <td>EVENTSTORE_PROJECTION_THREADS</td>
            <td>ProjectionThreads</td>
            <td>The number of threads to use for projections.</td>
            <td>3</td>
        </tr>
    </tbody>
</table>